--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,14 +1,3 @@
-google:
-  client:
-    clientId: 902381587114-mmt4g9a5a77gu6ibofemqps95sifb7on.apps.googleusercontent.com
-    clientSecret: lE3lkgOlMCW9yQSAeJZmy2aF
-    accessTokenUri: https://www.googleapis.com/oauth2/v4/token
-    userAuthorizationUri: https://accounts.google.com/o/oauth2/v2/auth
-    clientAuthenticationScheme: form
-    scope: email
-  resource:
-    userInfoUri: https://www.googleapis.com/oauth2/v3/userinfo
-    preferTokenInfo: true
 security:
   oauth2:
     client:
@@ -16,6 +5,18 @@ security:
       client-secret: acmesecret
       scope: read,write
       auto-approve-scopes: '.*'
+
+#google:
+#  client:
+#    clientId: 902381587114-mmt4g9a5a77gu6ibofemqps95sifb7on.apps.googleusercontent.com
+#    clientSecret: lE3lkgOlMCW9yQSAeJZmy2aF
+#    accessTokenUri: https://www.googleapis.com/oauth2/v4/token
+#    userAuthorizationUri: https://accounts.google.com/o/oauth2/v2/auth
+#    clientAuthenticationScheme: form
+#    scope: email, openid
+#  resource:
+#    userInfoUri: https://www.googleapis.com/oauth2/v3/userinfo
+#    preferTokenInfo: true
 facebook:
   client:
     clientId: 233668646673605
@@ -25,14 +26,22 @@ facebook:
     tokenName: oauth_token
     authenticationScheme: query
     clientAuthenticationScheme: form
+    scope: email
   resource:
     userInfoUri: https://graph.facebook.com/me
-github:
-  client:
-    clientId: bd1c0a783ccdd1c9b9e4
-    clientSecret: 1a9030fbca47a5b2c28e92f19050bb77824b5ad1
-    accessTokenUri: https://github.com/login/oauth/access_token
-    userAuthorizationUri: https://github.com/login/oauth/authorize
-    clientAuthenticationScheme: form
-  resource:
-    userInfoUri: https://api.github.com/user
+#github:
+#  client:
+#    clientId: bd1c0a783ccdd1c9b9e4
+#    clientSecret: 1a9030fbca47a5b2c28e92f19050bb77824b5ad1
+#    accessTokenUri: https://github.com/login/oauth/access_token
+#    userAuthorizationUri: https://github.com/login/oauth/authorize
+#    clientAuthenticationScheme: form
+#    scope: email, openid
+#  resource:
+#    userInfoUri: https://api.github.com/user
+ldap:
+  source:
+    name: 
+    image: http://docs.spring.io/spring-ldap/site/images/spring-ldap.png
+    url: ldap://localhost:8389/
+    baseDn: dc=springframework,dc=org
