--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'application'
+apply plugin: 'war'
 
 jar {
 	baseName = 'authenticating-oauth2'
@@ -52,6 +53,7 @@ dependencies {
 	
 	testCompile("org.apache.httpcomponents:httpclient")
 	testCompile("org.springframework.boot:spring-boot-starter-test")
+	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
 }
 // end::security[]
 
